@@ -36,20 +36,20 @@ public class Ray {
         Vector3D direction = firstLabel.rayDirection.copy();
         Vector3D hexCoords = board.getHexes().getKey(firstLabel.hexagon).copy();
         if (board.getHexes().getValue(hexCoords).hasTrueAtom()) {
-            points.addLast(board.getHexes().getValue(hexCoords));
+            points.add(points.size(), board.getHexes().getValue(hexCoords));       /*special addLast*/
             return null;
         }
         Vector3D zeroVector = new Vector3D();
 
         while (board.getHexes().getKeySet().contains(hexCoords)) {
-            points.addLast(board.getHexes().getValue(hexCoords));
+            points.add(points.size(), board.getHexes().getValue(hexCoords));        /*special addLast*/
             prevDirection = direction.copy();
-            direction.sum(points.getLast().influenceVector);
+            direction.sum(points.get(points.size() - 1).influenceVector);               /*special getLast*/
             if (!Vector3D.isNormalised(direction)) { return firstLabel; }
             if (direction.equals(zeroVector)) {
                 hexCoords.sum(prevDirection);
                 if (board.getHexes().getValue(hexCoords).hasTrueAtom()) {
-                    points.addLast(board.getHexes().getValue(hexCoords));
+                    points.add(points.size(), board.getHexes().getValue(hexCoords));    /*special addLast*/
                     return null;
                 } else {
                     direction = Vector3D.opposite(prevDirection);
@@ -59,7 +59,7 @@ public class Ray {
             hexCoords.sum(direction);
         }
 
-        return points.getLast().getBoardLabelAtCoords(direction);
+        return points.get(points.size() - 1).getBoardLabelAtCoords(direction);          /*special getLast */
     }
 
     public void drawRay() {
